# recalbox

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  Config.in  DOCUMENTATION.md  Dockerfile  Makefile  README.md  RELEASE-NOTES.md  TESTING.md  external.mk
projects/check-resolutions/: CMakeLists.txt  ResolutionAdapter.cpp  ResolutionAdapter.h  Resolutions.h  RootFolders.cpp  RootFolders.h  main.cpp
projects/check-resolutions/utils/: Http.cpp  IniFile.cpp  IniFile.h  Stringize.h  Strings.h  Zip.cpp
projects/check-resolutions/utils/datetime/: TimeSpan.h
projects/check-resolutions/utils/gl/: Colors.h  Vertex.h
projects/check-resolutions/utils/hash/: Crc32.cpp  Crc32.h  Crc32File.cpp  Md5.h
projects/check-resolutions/utils/locale/: Internationalizer.cpp  Internationalizer.h  LocaleHelper.h
projects/check-resolutions/utils/math/: Misc.cpp  Misc.h  Transform4x4f.cpp  Transform4x4f.h  Vector2f.cpp  Vector2i.cpp  Vector3f.cpp  Vector4f.h  Vectors.h
projects/check-resolutions/utils/sdl2/: SyncTimer.h  SyncronousEvent.h  SyncronousEventService.h
projects/frontend/: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CREDITS.md  Dockerfile  GAMELISTS.md  README.md  THEMES.md  recalbox-clion-formatter-config.xml  recalbox-clion-inspection-config.xml
projects/frontend/.gitlab/merge_request_templates/: mr_template.md
projects/frontend/.ideabackup/: .name  encodings.xml  modules.xml
projects/frontend/.ideabackup/codeStyles/: Project.xml  codeStyleConfig.xml
projects/frontend/.ideabackup/dictionaries/: bkg2k.xml
projects/frontend/.ideabackup/inspectionProfiles/: Project_Default.xml  Recalbox_Default.xml  profiles_settings.xml
projects/frontend/data/: ResourceUtil.cpp  ResourceUtil.cpp  Resources.h  generate.sh  res2h
projects/frontend/data/converted/: Recalbox_icons_ttf.cpp  Recalbox_logo_Grey_svg.cpp  Recalbox_logo_White_svg.cpp  arrow_svg.cpp  bluetooth__bt_bottom_svg.cpp  bluetooth__bt_controller_svg.cpp  bluetooth__bt_middle_svg.cpp  bluetooth__bt_top_svg.cpp  bluetooth_svg.cpp  busy_0_png.cpp  busy_0_svg.cpp  busy_1_png.cpp  busy_1_svg.cpp  busy_2_png.cpp  busy_2_svg.cpp  busy_3_png.cpp  busy_3_svg.cpp  button_filled_png.cpp  button_png.cpp  checkbox_checked_svg.cpp  checkbox_unchecked_svg.cpp  crt__224p_png.cpp  crt__240p_png.cpp  crt__288p_png.cpp  crt__480i_png.cpp  crt__480p_png.cpp  crt__576i_png.cpp  crt__i640x480_png.cpp  crt__i768x576_png.cpp  crt__logo_png.cpp  crt__p1920x224_png.cpp  crt__p1920x240_png.cpp  crt__p1920x240at120_png.cpp  crt__p1920x288_png.cpp  crt__p320x240_png.cpp  crt__p320x288_png.cpp  crt__p384x288_png.cpp  crt__p640x480_png.cpp  crt__pattern240_png.cpp  crt__pattern480_png.cpp  (+192 more)
projects/frontend/es-app/: CMakeLists.txt
projects/frontend/es-app/src/: ApplicationWindow.cpp  ApplicationWindow.h  CommandThread.cpp  CommandThread.h  DemoMode.cpp  DemoMode.h  EmptyData.h  EmulationStation.h  EmulationStation.h.in  FileData.cpp  FileData.h  FileSorts.cpp  FileSorts.h  FolderData.cpp  FolderData.h  GameNameMap.cpp  GameNameMapManager.cpp  GameNameMapManager.h  Gamelist.cpp  Gamelist.h  ItemType.h  LibretroRatio.cpp  LibretroRatio.h  MainRunner.cpp  MainRunner.h  MameNameMap.cpp  MameNameMap.h  MameNameMapManager.cpp  MameNameMapManager.h  MetaData.cpp  MetadataDescriptor.cpp  MetadataDescriptor.h  MetadataFieldDescriptor.cpp  MetadataFieldDescriptor.h  NetPlayThread.cpp  NetPlayThread.h  NetworkThread.cpp  NetworkThread.h  PlatformId.cpp  PlatformId.h  (+14 more)
projects/frontend/es-core/: CMakeLists.txt
projects/frontend/es-core/src/: AsyncHandle.h  AudioManager.cpp  AudioManager.h  Board.cpp  Board.h  CrtConf.cpp  CrtConf.h  GuiComponent.cpp  GuiComponent.h  HelpStyle.cpp  HelpStyle.h  HttpReq.cpp  HttpReq.h  ImageIO.cpp  ImageIO.h  InputConfig.cpp  InputConfig.h  InputManager.cpp  InputManager.h  InputStack.cpp  InputStack.h  Locale.h  Log.cpp  Log.h  MenuThemeData.cpp  MenuThemeData.h  Music.cpp  Music.h  RecalboxConf.cpp  RecalboxConf.h  Renderer.cpp  Renderer.h  Renderer_draw_gl.cpp  Renderer_init_sdlgl.cpp  ResolutionAdapter.cpp  ResolutionAdapter.h  Resolutions.cpp  Resolutions.h  RootFolders.cpp  RootFolders.h  (+23 more)
projects/frontend/locale/: CMakeLists.txt  emulationstation2.pot
projects/frontend/server-webapi/: CMakeLists.txt  Parameters.cpp  Parameters.h  main.cpp
projects/frontend/server-webapi/server/: IRouter.h  Server.cpp  Server.h
projects/frontend/tests/: CMakeLists.txt
projects/frontend/tests/tests/: test_format.cpp  test_http.cpp  test_messaging.cpp  test_path.cpp  test_regions.cpp  test_sizes.cpp  test_string.cpp  test_string_appenders.cpp  test_string_ascii_case.cpp  test_string_assigners.cpp  test_string_converters.cpp  test_string_deleters.cpp  test_string_extracters.cpp  test_string_finders.cpp  test_string_inserters.cpp  (+5 more)
projects/frontend/tool-md5zip/: CMakeLists.txt  main.cpp
projects/frontend/tool-pad2keyb/: CMakeLists.txt  Configuration.h  MappingConfiguration.cpp  MappingConfiguration.h  Pad.cpp  Pad.h  Pad2Keyb.h  PadConfiguration.cpp  PadConfiguration.h  PadConstants.h  PadItems.h  VirtualKeyboard.cpp  VirtualKeyboard.h  main.cpp
projects/videomode/: CMakeLists.txt  main.cpp
projects/wpaf/: .gitignore  .gitlab-ci.yml  CONTRIBUTING  Makefile.am  README  config.h  configure.ac
projects/wpaf/src/: Makefile.am  argon_forty.c  argon_forty.h  argon_forty_fan_controller.c  argon_forty_fan_controller.h  board_driver.h  boards.h  cpu_controller.c  cpu_controller.h  display_driver.h  display_manager.c  display_manager.h  fan_driver.c  fan_driver.h  fan_manager.c  fan_manager.h  fan_shim.c  fan_shim.h  gui.c  gui.h  log.c  mb_pwm_fan_controller.c  mb_pwm_fan_controller.h  null_display_controller.c  null_display_controller.h  oled_driver.h  oled_i2c_driver.c  oled_i2c_driver.h  pcf8574_fan_controller.c  pcf8574_fan_controller.h  piboy.c  piboy.h  pid_controller.c  pid_controller.h  rpi_poe_plus.c  rpi_poe_plus.h  rpi_pwm_fan_controller.c  rpi_pwm_fan_controller.h  ssd1306_display_controller.c  ssd1306_display_controller.h  (+10 more)
(+4420 files in other folders)
